# synapse

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: alpha_feedback.md  bug_report.md  operator_intervention_issue.md  plugin_request.md  reproducible_run_failure.md
config/: agent_limits.yaml
config/examples/: alpha.allowed_domains.yaml  alpha.env.example  alpha.trusted_plugins.yaml  local-safe-defaults.env.example  operator-project-setup.env.example
docs/: fixture-web.md
docs/alpha/: deployment-topology.md  failure-taxonomy.md  known-limitations.md  operator-runbook.md  plugin-policy.md  quickstart.md  security-boundaries.md  (+1 more)
examples/: claude_code_agent.py  codex_agent.py  openclaw_agent.py
tests/: test_a2a_heartbeat.py  test_a2a_tenant_binding.py  test_agent_budget.py  test_api_key_auth.py  test_app.py  test_auth.py  test_benchmark_suite.py  test_browser_hardening.py  test_browser_submodules.py  test_browser_tracing.py  test_browser_workers.py  test_capability_registry.py  test_checkpoint_resume.py  test_compression.py  test_event_bus_hardening.py  test_execution_policy.py  test_fixture_web.py  test_llm.py  test_operator_intervention.py  test_platform_model.py  test_plugin_isolation.py  test_registry_persistence.py  test_run_state.py  test_runtime_services.py  test_scheduler.py  test_scheduler_fencing.py  test_sdk_auth.py  test_session_persistence.py  test_session_profiles.py  test_state_store.py  test_tenant_isolation.py  test_websocket_isolation.py  test_websocket_tenant_delivery.py
ui/: package-lock.json  package.json
ui/lib/: auth.ts  (+2 more)
(+129 files in other folders)
